Add script functionality with form for picking a celebrity

--- a/index.html
+++ b/index.html
@@ -8,6 +8,51 @@
     <title></title>
   </head>
   <body>
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Celebrity Dating Quiz</h1>
+      </div>
 
+      <div class="well" id="blank">
+        <form>
+          <h3>Pick your favorite color:</h3>
+          <select class="form-control" id="color">
+            <option></option>
+            <option>Red</option>
+            <option>Blue</option>
+            <option>Green</option>
+          </select>
+
+          <h3>Pick your favorite food:</h3>
+          <select class="form-control" id="food">
+            <option></option>
+            <option>Italian</option>
+            <option>Mexican</option>
+            <option>Asian</option>
+          </select>
+
+          <div class="form-group">
+            <h3>Age</h3>
+            <label for="age"></label>
+            <input class="form-control" id="age" type="number">
+          </div>
+          <button type="submit" class="btn btn-success">Submit</button>
+        </form>
+      </div>
+      <div class="celebrity1">
+        <h3>Celebrity 1</h3>
+        <img src="#" alt="celebrity 1">
+      </div>
+      <div class="celebrity2">
+        <h3>Celebrity 2</h3>
+        <img src="#" alt="celebrity 2">
+      </div>
+      <div class="celebrity3">
+        <h3>Celebrity 3</h3>
+        <img src="#" alt="celebrity 3">
+      </div>
+
+
+    </div>
   </body>
 </html>
